# goit-algo2-hw-10

./: README.md  pyproject.toml
src/: task.ipynb
src/task_1_example/: hw09.py  visual.py
src/task_2_example/: hw10.py
